# znc-logs-importer

./: Cargo.toml
sql/: schema.sql
src/: main.rs
