[package]
name = "znc-logs-importer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.9.0"
chrono = "0.4.26"
eyre = "0.6.8"
futures = "0.3.28"
lazy_static = "1.4.0"
postgres-types = { version = "0.2.5", features = ["chrono-04", "derive"] }
regex = "1.9.1"
tokio = { version = "1.29.1", features = ["full", "tracing"] }
tokio-postgres = { version = "0.7.8", features = ["with-chrono-0_4"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
